Adding refresh token mechanism (not fully successfully tested yet)